--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           placeholder="Enter Your Email Here" class="form-control" required>
         </div>
         <div class="form-type">
-          <label id="number-label" for="number">Age <span class="clue">(Optional</span></label>
+          <label id="number-label" for="number">Age <span class="clue">(Optional)</span></label>
           <input type="number" name="age" id="number"
           placeholder="Enter Your Age Here" min="00" max="99" class="form-control"> 
         </div>
@@ -63,16 +63,16 @@
           </label><br>
           <label>
             <input name="user-recomment" value="Maybe" type="radio"
-            class="input-radio" checked> Maybe
+            class="input-radio"> Maybe
           </label><br>
           <label>
             <input name="user-recomment" value="Not sure" type="radio"
-            class="input-radio" checked> Not sure
+            class="input-radio"> Not sure
           </label><br>
         </div>
         <div class="form-type">
           <p>Which would you like us include to our lists of programs? 
-            <span class="clue">(Check all boxes that apply</span></p>
+            <span class="clue">(Check all boxes that apply)</span></p>
           <label>
             <input name="prefer" value="Back-end programs" type="checkbox"
             class="input-checkbox"> Back-end Programs
